--- a/src/app2.css
+++ b/src/app2.css
@@ -1,21 +1,17 @@
-#app2 {
-}
-#app2 .tab-bar {
+#app2 #table-bar {
   display: flex;
 }
-#app2 .tab-bar > li {
-  border: 1px solid grey;
+#app2 #table-bar > li {
   width: 50%;
+  border: 3px solid black;
 }
-#app2 .tab-bar > li.selected {
-  background: rgb(253, 221, 155);
-  color: white;
-}
-#app2 .tab-content {
-}
-#app2 .tab-content > li {
+#app2 #table-content > li {
   display: none;
 }
-#app2 .tab-content > li.active {
+#app2 #table-content > li.active {
   display: block;
+}
+#app2 #table-bar > li.selected {
+  background-color: grey;
+  color: white;
 }
