--- a/src/app3.css
+++ b/src/app3.css
@@ -1,9 +1,11 @@
+#app3 {
+}
 #app3 .square {
-  border: 1px solid grey;
   margin-top: 10vw;
   margin-left: 10vw;
   width: 10vw;
-  height: 10vw;
+  height: 10vh;
+  border: 1px solid black;
   transition: transform 1s;
 }
 #app3 .square.active {
